implemening tab controllers

--- a/CallAplication/en.lproj/InfoPlist.strings
+++ b/CallAplication/en.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* (No Commment) */
-"CFBundleName" = "";
+"CFBundleName" = "When2Call";
 
 /* (No Commment) */
-"CFBundleShortVersionString" = "";
+"CFBundleShortVersionString" = "1.0";
 
