finished tab bar controllers

--- a/en.lproj/Main.strings
+++ b/en.lproj/Main.strings
@@ -75,7 +75,7 @@
 "qWM-nE-Zyk.text" = "Label";
 
 /* Class = "UITabBarItem"; title = "Telefonanswer"; ObjectID = "tbZ-nJ-vnF"; */
-"tbZ-nJ-vnF.title" = "Telefonanswer";
+"tbZ-nJ-vnF.title" = "Voicemail";
 
 /* Class = "UILabel"; text = "Label"; ObjectID = "tw4-hw-BCB"; */
 "tw4-hw-BCB.text" = "Label";
